<resources>
    <string name="Continue_text">Continue</string>
    <string name="Name">Name</string>
    <string name="_0">0</string>
    <string name="_0_00">0.00</string>
    <string name="_0_0_0_1">0.0/0.1</string>
    <string name="_10">10</string>
    <string name="_1177711565">1177711565</string>
    <string name="_12">0</string>
    <string name="_12100">0</string>
    <string name="_146_40">146.40</string>
    <string name="_150_ml_qty">150 ML QTY</string>
    <string name="_16_12_2016_1324564587920">16-12-2016/1324564587920</string>
    <string name="_250_ml_qty">250 ML QTY</string>
    <string name="_300">300</string>
    <string name="_50">50%</string>
    <string name="_50_amc_invoice_discount">50% AMC invoice discount</string>
    <string name="_icon">icon</string>
    <string name="abn_amro">ABN AMRO</string>
    <string name="accesscode">Access Code : </string>
    <string name="add">Add</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_expense">Add Expense</string>
    <string name="additional_reason">Additional Reason</string>
    <string name="advance_payment">ADVANCE PAYMENT</string>
    <string name="alert">Alert</string>
    <string name="all">All</string>
    <string name="all_route_customer">All Route Customer</string>
    <string name="am502_large_swiss_strawberry">AM502 Large Swiss Strawberry</string>
    <string name="am5500_large_swiss_roll_vanila_24x110g">AM5500*LARGE SWISS ROLL VANILA (24X110G)</string>
    <string name="amount">AMOUNT</string>
    <string name="amount_0_00">amount: 0.00</string>
    <string name="amount_due">AMOUNT DUE</string>
    <string name="amout_due">Amount Due</string>
    <string name="amount_larger">Amount should not be greater than or less than payable amount</string>
    <string name="amt_paid">Amt.Paid</string>
    <string name="analysis">ANALYSIS</string>
    <string name="app_name">Fresh Daily</string>
    <string name="apply">apply</string>
    <string name="ar_colletion">COLLECTION</string>
    <string name="arabic">العربية</string>
    <string name="avail_limit">Avail. Limit</string>
    <string name="availableload">Available Load</string>
    <string name="bad">Bad</string>
    <string name="bad_return">Bad Return</string>
    <string name="bad_return_variance">Bad Return \n (Variance)</string>
    <string name="bad_returns">BAD RETURNS</string>
    <string name="balance">Balance</string>
    <string name="beginDay">Begin Day</string>
    <string name="beginday_route">Route # </string>
    <string name="begintrip">Begin Trip</string>
    <string name="berain">Berain</string>
    <string name="br">B.R</string>
    <string name="buyback_free">BUYBACK FREE</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_msg">Are you sure you want to cancel. All your changes will be reverted.</string>
    <string name="calendar">Calendar</string>
    <string name="caseLabel">"Cases : "</string>
    <string name="case_price">Cases</string>
    <string name="cases">Cases</string>
    <string name="cases_100">Cases : 100</string>
    <string name="cases_unit_0_00">Cases/unit: 0.00</string>
    <string name="cash">Cash</string>
    <string name="cash_sales">CASH SALES</string>
    <string name="categoryLabel">"Category : "</string>
    <string name="category_list">Category List</string>
    <string name="changinglanguage">Changing Language</string>
    <string name="changingstatus">Changing Status?</string>
    <string name="changingstatustext">Your current location does not match with Customer Location.Do you want to continue?</string>
    <string name="cheque">Cheque</string>
    <string name="cheque_amount">CHEQUE AMOUNT:</string>
    <string name="cheque_no">CHEQUE NO:</string>
    <string name="clear_data">Clear Data</string>
    <string name="close">Close</string>
    <string name="cname">Name</string>
    <string name="collection">Collection</string>
    <string name="complete_invoice">Complete Invoice</string>
    <string name="complete_transaction">Please complete transaction</string>
    <string name="confirmload">Confirm Load</string>
    <string name="confirmorder">Confirm Order</string>
    <string name="confirmreturn">Confirm Returns</string>
    <string name="code_mismatch">Code does not match. Try again</string>
    <string name="continue_lbl">Continue</string>
    <string name="coordinate_mismatch_msg">Your coordinates is not within customer threshold limit.To still proceed provide an access code provided by helpdesk</string>
    <string name="credentials_mismatch">Credentials do not match</string>
    <string name="cradit_sales">CREDIT SALES</string>
    <string name="credit">Credit</string>
    <string name="credit_1">10007665</string>
    <string name="credit_2">10007665</string>
    <string name="credit_3">10007665</string>
    <string name="credit_available">Avail. Limit</string>
    <string name="credit_days">Credit Days</string>
    <string name="credit_limit">Credit Limit</string>
    <string name="crno">CR No</string>
    <string name="currency">AED</string>
    <string name="current_invoice_amount">Current Invoice Amount</string>
    <string name="cust_ID">Cust ID</string>
    <string name="cust_id">Cust ID</string>
    <string name="customer">Customer</string>
    <string name="customer_1">Customer 1</string>
    <string name="customer_address">Address</string>
    <string name="customer_address1">Area</string>
    <string name="customer_address2">Street</string>
    <string name="customer_balance_report">CUSTOMER BALANCE REPORT</string>
    <string name="customer_decs">Customer decs</string>
    <string name="customer_list_title">Customers List</string>
    <string name="customer_list">CUSTOMER LIST</string>
    <string name="customer_name">Customer Name</string>
    <string name="customerid">Customer ID</string>
    <string name="customeroperation">Customer Operation</string>
    <string name="cutomer_address">Cust AD</string>
    <string name="damage_expiry_report">DAMAGE/EXPIRY REPORT</string>
    <string name="dashboard">Dashboard</string>
    <string name="data_loss_msg">All your data will be deleted. Do you want to continue?</string>
    <string name="data_posting_audit">DATA POSTING \n AUDIT</string>
    <string name="data_posting_audit_slide">Data Posting Audit</string>
    <string name="data_posting_audit_lbl">DATA POSTING AUDIT</string>
    <string name="date">16/01/2017</string>
    <string name="date_invalid">Date selection is invalid. Please select current date</string>
    <string name="day">Day </string>
    <string name="days">Days</string>
    <string name="debit_invoice">Debit invoice should not be collected</string>
    <string name="delete">Delete</string>
    <string name="delete_msg">Are you sure you want to delete?</string>
    <string name="delivery">Delivery</string>
    <string name="delivery_1234">Delivery# 1234</string>
    <string name="delivery_date">Delivery Date </string>
    <string name="delivery_complete">Delivery completed</string>
    <string name="delivery_delete">Delivery marked for deletion</string>
    <string name="delivery_date_23_oct_2016">Delivery date:23-oct-2016</string>
    <string name="delivery_list">Delivery List</string>
    <string name="delivery_order">Delivery Order</string>
    <string name="delivery_route">Delivery Route </string>
    <string name="deliverydate">Delivery Date</string>
    <string-array name="deliveryorder">
        <item>partial delivery</item>
        <item>full delivery</item>
    </string-array>
    <string name="deposit_report">DEPOSIT REPORT</string>
    <string name="descri">Description</string>
    <string name="description">Description</string>
    <string name="desiredload">Desired Load</string>
    <string name="discount">Discount</string>
    <string name="dismiss">Dismiss</string>
    <string name="do_not_print">Do Not Print</string>
    <string name="driver_name">Driver Name</string>
    <string name="driver_id">Driver ID</string>
    <string name="driver_collection">Driver Collection</string>
    <string name="due_date">Due Date</string>
    <string name="e2000">E102964</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="enableautosync">Enable Auto Sync</string>
    <string name="endtrip">End Trip</string>
    <string name="ending_inventory">Ending Inventory</string>
    <string name="end_invoice">End Invoice</string>
    <string name="english">English</string>
    <string name="enter_access_code">Enter OTP</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_category">Enter Category</string>
    <string name="enter_cash_amount">ENTER CASH AMOUNT:</string>
    <string name="enter_employee_hint">Username</string>
    <string name="enter_password_hint">Password</string>
    <string name="enter_employee_id">Please enter employee ID</string>
    <string name="enter_password">Please enter password</string>
    <string name="error_message">An error occured. Please try again</string>
    <string name="error_title">Error</string>
    <string name="excess">Excess</string>
    <string name="fax">Fax</string>
    <string name="feature_blocked">Option currently disabled for customer</string>
    <string name="frahn">Frahn</string>
    <string name="freegoods">FREEGOODS</string>
    <string name="fresh_unload">Fresh Unload</string>
    <string name="gbc">Berain SFA</string>
    <string name="good">Good</string>
    <string name="good_return">Good Return</string>
    <string name="good_returns">GOOD RETURNS</string>
    <string name="gr">G.R</string>
    <string name="hint_cr_no"><i>eg. 12345</i></string>
    <string name="hint_customer_name"><i>eg. John Doe</i></string>
    <string name="hint_customer_address1"><i>eg. 144 Baker Street</i></string>
    <string name="hint_customer_address2"><i>eg. London City</i></string>
    <string name="hint_customer_pobox"><i>12345</i></string>
    <string name="hint_customer_email"><i>eg. abc@xyz.com</i></string>
    <string name="hint_customer_phone"><i>eg. 0966xxxxxxx</i></string>
    <string name="hint_customer_fax"><i>eg. 12345678</i></string>
    <string name="image">image</string>
    <string name="information">Information</string>
    <string name="input_larger">Input Quantity is greater than the available Quantity</string>
    <string name="internet_available_msg">There is no internet connection on the device. Please check the connection and try again.</string>
    <string name="internet_available_title">No Connection</string>
    <string name="inv_date">Invoice Date</string>
    <string name="inv_qty">Inv Qty.</string>
    <string name="inventory_variance">Inventory Variance</string>
    <string name="invoice">INVOICE</string>
    <string name="item_code">Item Code</string>
    <string name="item_description">Desc</string>
    <string name="item_number">Item no</string>
    <string name="load">Load</string>
    <string name="loadrequest">Load Request</string>
    <string name="log_out">Log Out</string>
    <string name="manageinventory">Manage Inventory</string>
    <string name="messages">messages</string>
    <string name="outlet_inventory">Outlet Inventory</string>
    <string name="please_enter_odometer">Please enter Odometer :</string>
    <string name="return_item">Return Item</string>
    <string name="return_reason">Reason</string>
    <string name="returntype">Type of Return</string>
    <string name="route_code_101">Route Code : </string>
    <string name="save">save</string>
    <string name="select_category">Select Category</string>
    <string name="settings">Settings</string>
    <string name="unit_price">Pcs</string>
    <string name="units">Units</string>
    <string name="unload">Unload</string>
    <string name="upc">UPC</string>
    <string name="vanstock">Van Stock</string>
    <string name="view">VIEW</string>
    <string name="welcome_john_doe_1000002445">Welcome :</string>
</resources>