<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="@dimen/size_four"
                android:gravity="center"
                android:text="@string/item_number"
                android:textAllCaps="true"
                android:textStyle="bold"

                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="@dimen/size_four"
                android:gravity="center"
                android:text="@string/item_description"
                android:textAllCaps="true"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="@dimen/size_four"
                android:gravity="center"
                android:text="@string/case_price"
                android:textAllCaps="true"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="@dimen/size_four"
                android:gravity="center"
                android:text="@string/unit_price"
                android:textAllCaps="true"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="@dimen/size_four"
                android:gravity="center"
                android:text="@string/upc"
                android:textAllCaps="true"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>
